# Homomorphism-Encryption-KV-Store-Server

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  hash.hpp  main.cpp
